Fix menu on mobile

--- a/cabrare_theme/resources/css/style.css
+++ b/cabrare_theme/resources/css/style.css
@@ -37,6 +37,12 @@ header #logo img {
     height: 100%;
 }
 
+@media (max-width: 800px) {
+    #menu-wrapper {
+        overflow: initial;
+    }
+}
+
 /**
  * footer
  */
